--- a/src/main/resources/static/app/bets/view/bets.matches.html
+++ b/src/main/resources/static/app/bets/view/bets.matches.html
@@ -38,17 +38,21 @@
 
             <form class="form-horizontal" data-ng-submit="postUserBet()" >
 
-                <div class="form-group" ng-hide="true">
-                    <label class="control-label col-sm-2" for="machtId">Match Id:</label>
-                    <div class="col-sm-10">
-                        <p class="form-control-static" id="machtId" ng-model="userBet.matchId"></p>
-                    </div>
-                </div>
                 <div class="form-group">
                     <label class="control-label col-sm-2">Kickoff:</label>
-                    <div class="col-sm-10">
+                    <div class="col-sm-4">
                         <p class="form-control-static">{{selected.match.kickoff | date : 'MMM d, HH:mm' }}</p>
                     </div>
+
+                    <label class="control-label col-sm-2">Match #:</label>
+                    <div class="col-sm-4">
+                        <p class="form-control-static">
+                            <a role="button" data-ng-click="scrollMatches('prev')">Previous Match</a>
+                            {{selected.match.matchId}}
+                            <a role="button" data-ng-click="scrollMatches('next')">Next Match</a>
+                        </p>
+                    </div>
+
                 </div>
                 <div class="form-group">
                     <label class="control-label col-sm-2">Match:</label>
