adjust some pages to mobile

--- a/src/main/resources/static/app/games/view/games.groups.html
+++ b/src/main/resources/static/app/games/view/games.groups.html
@@ -10,23 +10,25 @@
 
             <div class="panel-heading" >Group {{group.groupId}}</div>
 
-            <table class="table table-hover table-condensed">
+            <table class="table table-hover table-condensed table-bordered">
                 <thead>
                 <tr>
                     <th scope="col"></th>
-                    <th scope="col">Played</th>
-                    <th scope="col">Won</th>
-                    <th scope="col">Draw</th>
-                    <th scope="col">Lost</th>
-                    <th scope="col">Goals for</th>
-                    <th scope="col">Goals Against</th>
-                    <th scope="col">+/-</th>
-                    <th scope="col">Points</th>
+                    <th scope="col" title="Game Played">P</th>
+                    <th scope="col" title="Games Won">W</th>
+                    <th scope="col" title="Draw">D</th>
+                    <th scope="col" title="Games Lost">L</th>
+                    <th scope="col" title="Goals For">GF</th>
+                    <th scope="col" title="Goals Against">GA</th>
+                    <th scope="col" title="Goals Difference">GD</th>
+                    <th scope="col" title="Points">Pts</th>
                 </tr>
                 </thead>
                 <tbody>
-                <tr ng-repeat-start="teamInGroup in prepareTeamsInGroup(group.teamsInGroup)">
-                    <th><h4><team data="teamInGroup.team"/></h4></th>
+                <tr ng-repeat-start="teamInGroup in prepareTeamsInGroup(group.teamsInGroup)"
+                    data-toggle="collapse"
+                    data-target="#team-{{teamInGroup.team.code}}-matches" style="cursor: pointer;">
+                    <th><h5><team data="teamInGroup.team"/></h5></th>
                     <td>{{teamInGroup.gamesPlayed }}</td>
                     <td>{{teamInGroup.gamesWon }}</td>
                     <td>{{teamInGroup.gamesTied }}</td>
@@ -35,12 +37,6 @@
                     <td>{{teamInGroup.goalsReceived }}</td>
                     <td>{{(teamInGroup.goalsScored - teamInGroup.goalsReceived)}}</td>
                     <td>{{teamInGroup.points | number}}</td>
-                    <td>
-                        <button type="button" class="btn btn-default btn-sm" data-toggle="collapse"
-                                data-target="#team-{{teamInGroup.team.code}}-matches">
-                            <span aria-hidden="true"></span> Matches
-                        </button>
-                    </td>
                 </tr>
                 <tr ng-repeat-end>
                     <td colspan="10">
