--- a/src/main/resources/static/app/teams/view/teams.confederations.html
+++ b/src/main/resources/static/app/teams/view/teams.confederations.html
@@ -16,13 +16,13 @@
                 <tr>
                     <th scope="col">Team</th>
                     <th scope="col">Ranking</th>
-                    <th scope="col">Titles Won</th>
-                    <th scope="col">World Cup Appearances</th>
+                    <th scope="col">Titles</th>
+                    <th scope="col">Appearances</th>
                 </tr>
                 </thead>
                 <tbody>
                 <tr ng-repeat="team in teams">
-                    <th><h4><team data="team"/></h4></th>
+                    <th><h5><team data="team"/></h5></th>
                     <td>{{team.fifaRanking}}</td>
                     <td>{{team.titles}}</td>
                     <td>{{team.appearances}}</td>
