--- a/src/main/resources/static/app/directives/view/match.template.html
+++ b/src/main/resources/static/app/directives/view/match.template.html
@@ -1,22 +1,18 @@
-<table class="table table-hover table-striped table-bordered">
-    <tbody>
-    <tr ng-repeat="match in matches | orderBy: 'kickoff'">
-        <td class="col-md-1">
-            <div><b>{{match.stage}}</b></div>
-            <div>{{match.kickoff | date : 'MMM d, HH:mm'}}</div>
-        </td>
-        <td class="col-md-2">
-            <h4><team data="match.homeTeam"/></h4>
-        </td>
-        <td class="col-md-1 text-center">
-            <h3>{{match.result.homeTeamGoals}} : {{match.result.awayTeamGoals}}</h3>
-        </td>
-        <td class="col-md-2">
-            <h4><team data="match.awayTeam"/></h4>
-        </td>
-        <td class="col-md-2 text-right" id="match-{{match.matchId}}-link">
-            <match-links data="match"/>
-        </td>
-    </tr>
-    </tbody>
-</table>
+
+<div class="panel panel-default" style="margin-left: 10px; padding: 10px;"
+     ng-repeat="match in matches | orderBy: 'kickoff'">
+  <table class="table">
+     <tr>
+         <td><b>{{match.stage}}</b> {{match.kickoff | date : 'MMM d, HH:mm'}}</td>
+         <td class="text-right"><match-links data="match"/></td>
+     </tr>
+  <tr>
+      <td><h5><team data="match.homeTeam"/></h5></td>
+      <td class="text-right">{{match.result.homeTeamGoals}}</td>
+  </tr>
+     <tr>
+         <td><team data="match.awayTeam"/></h5></td>
+         <td class="text-right">{{match.result.awayTeamGoals}}</td>
+     </tr>
+  </table>
+</div>
