--- a/src/main/resources/static/app/games/view/games.groups.html
+++ b/src/main/resources/static/app/games/view/games.groups.html
@@ -28,7 +28,7 @@
                 <tr ng-repeat-start="teamInGroup in prepareTeamsInGroup(group.teamsInGroup)"
                     data-toggle="collapse"
                     data-target="#team-{{teamInGroup.team.code}}-matches" style="cursor: pointer;">
-                    <th><h5><team data="teamInGroup.team"/></h5></th>
+                    <th><team data="teamInGroup.team"/></th>
                     <td>{{teamInGroup.gamesPlayed }}</td>
                     <td>{{teamInGroup.gamesWon }}</td>
                     <td>{{teamInGroup.gamesTied }}</td>
