--- a/src/main/resources/static/app/directives/view/match.template.html
+++ b/src/main/resources/static/app/directives/view/match.template.html
@@ -1,5 +1,5 @@
 
-<div class="panel panel-default" style="margin-left: 10px; padding: 10px;"
+<div class="panel panel-default" style="margin-left: 10px; "
      ng-repeat="match in matches | orderBy: 'kickoff'">
   <table class="table table-condensed">
    <tr>
