--- a/src/main/resources/static/app/games/view/games.groups.html
+++ b/src/main/resources/static/app/games/view/games.groups.html
@@ -10,7 +10,7 @@
 
             <div class="panel-heading" >Group {{group.groupId}}</div>
 
-            <table class="table table-hover table-condensed table-bordered">
+            <table class="table table-hover table-condensed ">
                 <thead>
                 <tr>
                     <th scope="col"></th>
@@ -39,7 +39,7 @@
                     <td>{{teamInGroup.points | number}}</td>
                 </tr>
                 <tr ng-repeat-end>
-                    <td colspan="10">
+                    <td colspan="9">
                         <div id="team-{{teamInGroup.team.code}}-matches" class="collapse">
                             <matches data="teamInGroup.matches"></matches>
                         </div>
