--- a/src/main/resources/static/app/teams/view/teams.fifaranking.html
+++ b/src/main/resources/static/app/teams/view/teams.fifaranking.html
@@ -22,7 +22,7 @@
     </thead>
     <tbody>
     <tr ng-repeat="team in teams | orderBy:propertyName:reverse">
-        <th><team data="team"/></th>
+        <td><team data="team"/></td>
         <td>{{team.fifaRanking}}</td>
         <td>{{team.titles}}</td>
         <td>{{team.appearances}}</td>
