fix bet locktime ui fixes

--- a/src/main/resources/static/app/directives/view/match.template.html
+++ b/src/main/resources/static/app/directives/view/match.template.html
@@ -1,4 +1,4 @@
-<div class="panel panel-default" style="margin-left: 10px;"
+<div class="panel panel-default" style="margin: 10px;"
      ng-repeat="match in matches | orderBy: 'kickoff'">
 
     <div class="panel-heading">
