--- a/src/main/resources/static/app/games/view/games.groups.html
+++ b/src/main/resources/static/app/games/view/games.groups.html
@@ -39,7 +39,7 @@
                     <td>{{teamInGroup.points | number}}</td>
                 </tr>
                 <tr ng-repeat-end>
-                    <td colspan="9">
+                    <td colspan="9" style="padding: 0px;">
                         <div id="team-{{teamInGroup.team.code}}-matches" class="collapse">
                             <matches data="teamInGroup.matches"></matches>
                         </div>
